--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+  "argon2-cffi>=25.1.0",
   "django>=6.0.1",
   "django-stubs-ext>=5.2.9",
+  "graphene>=3.4.3",
+  "graphene-django>=3.2.3",
+  "layrz-forms>=2.1.11",
   "psycopg[binary]>=3.3.2",
   "python-dotenv>=1.2.1",
+  "tzdata>=2025.3",
 ]
 
 [dependency-groups]
